cmake_minimum_required(VERSION 3.27)
project(KV1)

set(CMAKE_CXX_STANDARD 17)

add_executable(KV1 main.cpp
        Tree.cpp
        Tree.h
        Root.cpp
        Root.h
        Subj_2.cpp
        Subj_2.h
        Subj_3.cpp
        Subj_3.h
        Subj_4.cpp
        Subj_4.h
        Subj_5.cpp
        Subj_5.h
        Subj_6.cpp
        Subj_6.h
)
